--- a/index.html
+++ b/index.html
@@ -2,34 +2,32 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Icecreem</title>
-  <meta name="<meta name="viewport" content="width=device-width,initial-scale=1">" content="">
-  <link href="css/main.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
+  <title>Frozen-not in time</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="card">
     <div class="grid grid-middle wrapper">
-      <div class="text-center unit xs-1 m-1-2 l-1-2 relative text">
+      <div class="text unit xs-1 m-1-2 l-1-2 relative text">
         <div class="head">
-          <h1>Icecreem</h1>
+          <h1>Ice Cream</h1>
         </div>
-        <div class="body">
-          <h2 class="text-left">So sweet, creamy & delicious it’ll literally melt in your mouth!</h2>
-        </div>
-        <div class="enjoy">
-          <a class="btn btn-ghost giga" href="#">Enjoy Now!</a>
-        </div>
+        <p class="peta body">So sweet, creamy & delicious it’ll literally melt in your mouth!</p>
+        <a class="btn btn-ghost giga" href="#">Enjoy Now!</a>
       </div>
-      <div class="unit xs-1 m-1-2 l-1-2 icecreem">
-        <img class="cone" src="images/cone.svg" alt="">
-        <img class="mint" src="images/mint-chip.svg" alt="">
-        <img class="chocolate" src="images/chocolate-chip.svg" alt="">
-        <img class="vanilla" src="images/vanilla-fudge.svg" alt="">
-        <img class="cherry" src="images/cherry.svg" alt="">
+      <div class="unit xs-1 s-1 m-1-4 l-1-4 icecreem">
+        <div class="relative icecreem">
+          <img class="cone" src="images/cone.svg" alt="">
+          <img class="mint" src="images/mint-chip.svg" alt="">
+          <img class="chocolate" src="images/chocolate-chip.svg" alt="">
+          <img class="vanilla" src="images/vanilla-fudge.svg" alt="">
+          <img class="cherry" src="images/cherry.svg" alt="">
+        </div>
       </div>
     </div>
   </div>
