Make more corections

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       </div>
       <div class="unit xs-1 s-1 m-1-4 l-1-4 icecreem">
         <div class="relative icecreem">
-          <img class="cone" src="images/cone.svg" alt="">
-          <img class="mint" src="images/mint-chip.svg" alt="">
-          <img class="chocolate" src="images/chocolate-chip.svg" alt="">
-          <img class="vanilla" src="images/vanilla-fudge.svg" alt="">
-          <img class="cherry" src="images/cherry.svg" alt="">
+          <img class="cherry drop" src="images/cherry.svg" alt="">
+          <img class="vanilla drop" src="images/vanilla-fudge.svg" alt="">
+          <img class="chocolate drop" src="images/chocolate-chip.svg" alt="">
+          <img class="mint drop" src="images/mint-chip.svg" alt="">
+          <img class="cone drop" src="images/cone.svg" alt="">
         </div>
       </div>
     </div>
