Make markbot fixes

--- a/index.html
+++ b/index.html
@@ -12,21 +12,19 @@
 </head>
 <body>
   <div class="card">
-    <div class="grid grid-middle wrapper">
-      <div class="text unit xs-1 m-1-2 l-1-2 relative text">
-        <div class="head">
-          <h1>Ice Cream</h1>
-        </div>
+    <div class="grid gutter-2 grid-middle wrapper">
+      <div class="text unit xs-1 m-3-4 l-3-4 relative text">
+        <h1 class="tenamega title push-0">Ice Cream</h1>
         <p class="peta body">So sweet, creamy & delicious it’ll literally melt in your mouth!</p>
         <a class="btn btn-ghost giga" href="#">Enjoy Now!</a>
       </div>
       <div class="unit xs-1 s-1 m-1-4 l-1-4 icecreem">
         <div class="relative icecreem">
-          <img class="cherry drop" src="images/cherry.svg" alt="">
-          <img class="vanilla drop" src="images/vanilla-fudge.svg" alt="">
-          <img class="chocolate drop" src="images/chocolate-chip.svg" alt="">
-          <img class="mint drop" src="images/mint-chip.svg" alt="">
-          <img class="cone drop" src="images/cone.svg" alt="">
+          <img class="absolute cherry drop" src="images/cherry.svg" alt="">
+          <img class="absolute vanilla drop" src="images/vanilla-fudge.svg" alt="">
+          <img class="absolute chocolate drop" src="images/chocolate-chip.svg" alt="">
+          <img class="absolute mint drop" src="images/mint-chip.svg" alt="">
+          <img class="absolute cone drop" src="images/cone.svg" alt="">
         </div>
       </div>
     </div>
